fix: ticket-123 add id-token: write

--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -5,6 +5,7 @@ on:
     types: ["opened", "synchronize", "edited", "closed"]
 
 permissions:
+  id-token: write
   contents: write
   pull-requests: write
 
