feat: ticket-123 add setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,16 +2,15 @@
 name = aws-boto3-sdk-helpers
 version = 1.0.1
 description = Contains helper functions for the AWS Python sdk (Boto3) package.
-long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
+long_description = file: README.rst, LICENSE.rst
 long_description_content_type = text/markdown
 author = Yiskaneto
 license = MIT
 license_files =
     LICENSE
 project_urls =
-    homepage = https://github.com/openwurl/boto3-helpers
+    homepage = https://github.com/yiskaneto/aws-boto3-sdk-helpers
 classifiers =
-    Framework :: Boto3
     Programming Language :: Python :: 3
 keywords = boto3, botocore, aws
 [options]
