feat: ticket-123 setup desc updated

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = aws-boto3-sdk-helpers
 version = 1.0.2
 description = Contains helper functions for the AWS Python sdk (Boto3) package.
-long_description = file: README.rst, LICENSE.rst
+long_description = file: README, LICENSE
 long_description_content_type = text/markdown
 author = Yiskaneto
 license = MIT
