--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = aws-boto3-sdk-helpers
-version = 1.0.5
+name = aws_boto3_sdk_helpers
+version = 1.0.6
 description = Contains helper functions for the AWS Python sdk (Boto3) package.
 long_description = file: README.md, LICENSE
 long_description_content_type = text/markdown
