--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = aws_boto3_sdk_helpers
-version = 1.0.8
-description = Contains helper functions for the AWS Python sdk (Boto3) package.
+version = 1.0.9
+description = "Contains helper functions for the AWS Python sdk (Boto3) package."
 long_description = file: README.md, LICENSE
 long_description_content_type = text/markdown
 author = Yiskaneto
@@ -14,7 +14,9 @@ classifiers =
     Programming Language :: Python :: 3
 keywords = boto3, botocore, aws
 [options]
-packages = find:
+package_dir =
+   =src
+packages = aws_boto3_sdk_helpers
 python_requires = >=3.8
 install_requires =
     boto3
