--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,12 @@
 [metadata]
 name = aws_boto3_sdk_helpers
-version = 1.0.10
+version = 1.0.11
 description = "Contains helper functions for the AWS Python sdk (Boto3) package."
 long_description = file: README.md, LICENSE
 long_description_content_type = text/markdown
 author = Yiskaneto
 license = MIT
-license_files =
-    LICENSE
+license_files = LICENSE
 project_urls =
     homepage = https://github.com/yiskaneto/aws-boto3-sdk-helpers
 classifiers =
@@ -15,9 +14,13 @@ classifiers =
 keywords = boto3, botocore, aws
 [options]
 package_dir =
-   =src
-packages = aws_boto3_sdk_helpers
+    =src
+packages = find_namespace:
+# packages = aws_boto3_sdk_helpers
 python_requires = >=3.8
 install_requires =
     boto3
     botocore
+
+[options.packages.find]
+where = src
