docs: ticket-123 refactor base

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = aws_boto3_sdk_helpers
-version = 1.0.11
+version = 1.0.12
 description = "Contains helper functions for the AWS Python sdk (Boto3) package."
 long_description = file: README.md, LICENSE
 long_description_content_type = text/markdown
@@ -13,14 +13,9 @@ classifiers =
     Programming Language :: Python :: 3
 keywords = boto3, botocore, aws
 [options]
-package_dir =
-    =src
-packages = find_namespace:
-# packages = aws_boto3_sdk_helpers
+packages =
+    src
 python_requires = >=3.8
 install_requires =
     boto3
     botocore
-
-[options.packages.find]
-where = src
