--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = aws_boto3_sdk_helpers
-version = 1.0.12
+version = 1.0.13
 description = "Contains helper functions for the AWS Python sdk (Boto3) package."
 long_description = file: README.md, LICENSE
 long_description_content_type = text/markdown
@@ -14,7 +14,8 @@ classifiers =
 keywords = boto3, botocore, aws
 [options]
 packages =
-    src
+    src/
+package_dit = src/
 python_requires = >=3.8
 install_requires =
     boto3
